# ai-product-team

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  stage_1.py  stage_10.py  stage_11.py  stage_2.py  stage_3.py  stage_4.py  stage_5.py  stage_6.py  stage_7.py  stage_8.py
src/agents/: architect.py  code_reviewer.py  debate_agents.py  developer.py  evaluator.py  pm_agent.py  researcher.py  visionary.py
src/core/: config.py  cost_tracker.py  debate.py  learning_engine.py  loop_detector.py  orchestrator.py  phases.py  safety.py  sandbox.py
src/dashboard/: app.py
src/models/: code.py  debate.py  evaluations.py  ideas.py  learning.py  prd.py
src/storage/: mongo_store.py  redis_bus.py
src/tools/: web_research.py
tests/: test_dashboard.py  test_smoke.py
tests/agents/: test_visionary.py
tests/core/: test_debate.py  test_learning.py  test_orchestrator.py  test_safety.py  test_sandbox.py  test_storage.py
tests/models/: test_evaluations.py  test_prd.py
tests/tools/: test_web_research.py
