[project]
name = "ai-product-rd-team"
version = "0.1.0"
requires-python = ">=3.12"
description = "Automated AI Product R&D Team — multi-agent product discovery and development"
dependencies = [
    "pydantic-ai>=0.0.30",
    "pydantic>=2.6",
    "openai>=1.40",
    "redis>=5.0",
    "motor>=3.3",
    "pymongo>=4.6",
    "python-dotenv>=1.0",
    "rich>=13.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.8",
    "ruff>=0.4",
]
dashboard = [
    "streamlit>=1.30",
    "streamlit-autorefresh>=1.0",
    "pandas>=2.1",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "TCH"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["src*"]
